Refactor List.of to Arrays.asList